# seb-lunchmoney-sync

./: .env.example  .gitignore  LICENSE  Makefile  PRIVACY.md  README.md  TERMS.md  pyproject.toml
ops/: com.klokie.seb-lunchmoney-sync.plist
src/seb_lunchmoney_sync/: __init__.py  callback_server.py  cli.py  config.py  enablebanking.py  lunchmoney.py  mapper.py  secrets.py
