[project]
name = "seb-lunchmoney-sync"
version = "0.1.0"
description = "Sync SEB transactions (via Enable Banking) into Lunch Money"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "click>=8.1",
]

[project.scripts]
seb-sync = "seb_lunchmoney_sync.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seb_lunchmoney_sync"]
